--- a/templates/profil/favorite.html.twig
+++ b/templates/profil/favorite.html.twig
@@ -20,11 +20,11 @@
                             <a href="{{ path('app_profil')}}" class="text-gray-800">Mon profil</a>
                         </li>
                         <li>
-                            <a href="{{ path('app_profile_announcement')}}">Mes annonces</a>
+                            <a href="{{ path('app_annonce')}}">Mes annonces</a>
                         </li>
-                        <li>
+                        {# <li>
                             <a href="{{ path('app_profil_favorite')}}" class="text-gray-800">Mes favoris</a>
-                        </li>
+                        </li> #}
                         <li>
                             <a href="{{ path('app_cars_vente')}}">Déposer une annonce</a>
                         </li>
