--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -86,17 +86,18 @@
 
 						</li>
 					</ul>
-					<div class="justify-start flex">
-						{% if app.user %}
-							<a class="lg:inline-block py-2 px-2 text-sm rounded-xl transition" style="color: #0060A7;" href="{{ path('app_message')}}">
-							Message
-							</a>
-							<a class="hidden lg:inline-block py-2 px-4 text-sm rounded-xl transition" href="{{ path('app_profil')}}">Profil</a>
-							<a class="hidden lg:inline-block lg:ml-auto lg:mr-3 py-2 text-sm rounded-xl transition" href="{{ path('app_logout')}}">Déconnexion</a>
-						{% else %}
-							<a class="hidden lg:inline-block py-2 px-6 text-sm rounded-xl transition" href="{{ path('app_login')}}">Connexion</a>
-							<a class="hidden lg:inline-block lg:ml-auto lg:mr-3 py-2 text-sm rounded-xl transition" href="{{ path('app_register')}}">Inscription</a>
-						{% endif %}
+		<div class="justify-start flex">
+    {% if app.user %}
+        <a class="lg:inline-block py-2 px-2 text-sm rounded-xl transition" style="color: #0060A7;" href="{{ path('app_message_conversation', {'receiverId': app.user.id}) }}">
+            Message
+        </a>
+        <a class="hidden lg:inline-block py-2 px-4 text-sm rounded-xl transition" href="{{ path('app_profil') }}">Profil</a>
+        <a class="hidden lg:inline-block lg:ml-auto lg:mr-3 py-2 text-sm rounded-xl transition" href="{{ path('app_logout') }}">Déconnexion</a>
+    {% else %}
+        <a class="hidden lg:inline-block py-2 px-6 text-sm rounded-xl transition" href="{{ path('app_login') }}">Connexion</a>
+        <a class="hidden lg:inline-block lg:ml-auto lg:mr-3 py-2 text-sm rounded-xl transition" href="{{ path('app_register') }}">Inscription</a>
+    {% endif %}
+</div>
 
 					</nav>
 					<div class="navbar-menu relative z-50 hidden">
