--- a/templates/message/new.html.twig
+++ b/templates/message/new.html.twig
@@ -18,10 +18,14 @@
 					</div>
 					<div class="flex-1 overflow-y-auto">
 						<ul class="space-y-4">
+
+
+
+						{# {{ dump(app.user) }} #}
 							{% for message in messages %}
-								<li class="flex {% if message.sender.username == app.user.username %}justify-end{% else %}justify-start{% endif %}">
+								<li class="flex {% if message.sender.lastName == app.user.lastName %}justify-end{% else %}justify-start{% endif %}">
 									<div class="max-w-xs">
-										<div class="mt-1 {% if message.sender.username == app.user.username %}bg-blue-100{% else %}bg-gray-100{% endif %} text-gray-800 p-2 rounded-lg inline-block">
+										<div class="mt-1 {% if message.sender.lastName == app.user.lastName %}bg-blue-100{% else %}bg-gray-100{% endif %} text-gray-800 p-2 rounded-lg inline-block">
 											{{ message.createdAt|date("m/d/Y") }}
 											-
 											{{ message.content }}
@@ -29,20 +33,34 @@
 									</div>
 								</li>
 							{% endfor %}
+
+
+
 						</ul>
 					</div>
-					<form id="messageForm" action="{{ path('app_message_new', {'id': car.id}) }}" method="POST">
+
+
+					{# <form id="messageForm" action="{{ path('app_message_new', {'id': car.id}) }}" method="POST">
 						<div class="mt-4">
 							<input type="hidden" name="receiver_id" value="{{ receiver.id }}">
 							<div class="flex items-center border rounded-lg overflow-hidden">
 								<input type="text" name="message[content]" class="w-full py-2 px-4" placeholder="Message...">
 								<button type="submit" class="flex items-center justify-center px-3 border-l text-white bg-blue-500">Envoyer</button>
+								{{ dump(car.id) }}
 							</div>
 						</div>
-					</form>
+										</form>
+									</div> #}
+
+
+					{{form_start(form)}}
+
+					{{ form_row(form.content) }}
+					{{ form_row(form.envoyer) }}
+
+					{{ form_end(form) }}
 				</div>
 			</div>
-		</div>
-	</section>
+		</section>
 
-{% endblock %}
+	{% endblock %}
