--- a/templates/profil/anouncemment.html.twig
+++ b/templates/profil/anouncemment.html.twig
@@ -4,12 +4,10 @@
 	Mes Annonces
 {% endblock %}
 
-{% block stylesheets %}
-	<link rel="stylesheet" href="{{ asset('assets/css/profil.css') }}">
-{% endblock %}
+{% block stylesheets %}{% endblock %}
+
 
 {% block body %}
-
 	<section>
 		<div class="mx-auto">
 			<div
@@ -21,16 +19,16 @@
 							<a href="{{ path('app_profil')}}" class="text-gray-800">Mon profil</a>
 						</li>
 						<li>
-							<a href="{{ path('app_profile_announcement')}}">Mes annonces</a>
+							<a href="{{ path('app_annonce')}}">Mes annonces</a>
 						</li>
-						<li>
+						{# <li>
 							<a href="{{ path('app_profil_favorite')}}" class="text-gray-800">Mes favoris</a>
-						</li>
+						</li> #}
 						<li>
 							<a href="{{ path('app_cars_vente')}}">Déposer une annonce</a>
 						</li>
 						<li>
-							<a href="{{path('app_logout')}}">Déconnexion</a>
+							<a href="{{ path('app_logout')}}">Déconnexion</a>
 						</li>
 					</ul>
 				</div>
@@ -39,14 +37,30 @@
 					<div class="bg-white p-6 rounded shadow">
 						<h1 class="text-xl font-semibold mb-4">Mes Annonces</h1>
 						<div class="border-2 border-dashed border-gray-300 p-6 text-center">
-							<p>Vous n'avez pas d'annonces</p>
-							<a href="{{ path('app_cars_vente')}}">
-								<button type="submit" class="bg-pink-500 text-white px-4 py-2 rounded mt-4">Déposer une annonce</button>
-							</a>
+							{# {% if userCars is empty %}
+								<p>Vous n'avez pas d'annonces</p>
+								<a href="{{ path('app_cars_vente') }}">
+									<button type="submit" class="bg-pink-500 text-white px-4 py-2 rounded mt-4">Déposer une annonce</button>
+								</a>
+							{% else %}
+								<p>Vous avez
+									{{ userCars|length }}
+									annonce(s).</p>
+								<ul>
+									{% for car in userCars %}
+										<li>
+											{{ car.name }}
+											-
+											{{ car.model }}
+											<a href="{{ path('app_annonce_edit', {id: car.id}) }}">Modifier</a>
+										</li>
+									{% endfor %}
+								</ul>
+							{% endif %} #}
 						</div>
 					</div>
 				</div>
 			</div>
-		</section>
-
+		</div>
+		{# </section> #}
 	{% endblock %}
