--- a/templates/profil/profil.html.twig
+++ b/templates/profil/profil.html.twig
@@ -1,85 +1,79 @@
 {% extends 'base.html.twig' %}
 
 {% block title %}
-    Mes Annonces
+	Mes Annonces
 {% endblock %}
 
 {% block body %}
-<section>
-    <div class=" mx-auto relative">
-        <div class="shadow-lg">
-            <div class="flex flex-wrap">
-                <!-- Sidebar -->
-                <div class="w-full md:w-1/4 p-4 shadow-lg relative text-white" style="background-color: #0060A7;">
-                    <ul class="space-y-4 profil-items text-white">
-                        <li>
-                            <a href="{{ path('app_profil')}}" class="block md:text-white">Mon profil</a>
-                        </li>
-                        <li>
-                            <a href="{{ path('app_profile_announcement')}}" class="block md:text-white">Mes annonces</a>
-                        </li>
-                        <li>
-                            <a href="{{ path('app_profil_favorite')}}" class="block md:text-white">Mes favoris</a>
-                        </li>
-                        <li>
-                            <a href="{{ path('app_cars_vente')}}" class="block md:text-white">Déposer une annonce</a>
-                        </li>
-                        <li>
-                            <a href="{{path('app_logout')}}" class="block md:text-white">Déconnexion</a>
-                        </li>
-                    </ul>
-                </div>
+	<section>
+		<div class="mx-auto relative">
+			<div class="shadow-lg">
+				<div class="flex flex-wrap">
+					<div class="w-full md:w-1/4 p-4 shadow-lg relative text-white" style="background-color: #0060A7;">
+						<ul class="space-y-4 profil-items text-white">
+							<li>
+								<a href="{{ path('app_profil') }}" class="block md:text-white">Mon profil</a>
+							</li>
+							<li>
+								<a href="{{ path('app_annonce')}}" class="block md:text-white">Mes annonces</a>
+							</li>
+							{# <li>
+								<a href="#" class="block md:text-white">Mes favoris</a>
+							</li> #}
+							<li>
+								<a href="{{ path('app_logout') }}" class="block md:text-white">Déconnexion</a>
+							</li>
+						</ul>
+					</div>
 
-                <!-- Form -->
-                <form action="#" class="w-full md:w-3/4 p-4" method="POST">
-                    <h1 class="text-xl font-semibold mb-4 block">Mon Profil</h1>
-                    <!-- Civility, Name, Surname -->
-                    <div class="mb-4">
-                        <label class="block text-gray-700 mb-2">Civilité :</label>
-                        <select name="civility" class="border rounded w-full py-2 px-3 text-gray-700">
-                            <option>-</option>
-                            <option>Monsieur</option>
-                            <option>Madame</option>
-                        </select>
-                    </div>
-                    <div class="mb-4">
-                        <label class="block text-gray-700 mb-2">Nom :</label>
-                        <input type="text" name="nom" class="border rounded w-full py-2 px-3 text-gray-700" />
-                    </div>
-                    <div class="mb-4">
-                        <label class="block text-gray-700 mb-2">Prénom :</label>
-                        <input type="text" name="prenom" class="border rounded w-full py-2 px-3 text-gray-700" />
-                    </div>
-                    <!-- Phone -->
-                    <div class="mb-4">
-                        <label class="block text-gray-700 mb-2">Téléphone :</label>
-                        <input type="text" name="telephone" class="border rounded w-full py-2 px-3 text-gray-700" />
-                    </div>
-                    <!-- Email -->
-                    <div class="mb-4">
-                        <label class="block text-gray-700 mb-2">Email :</label>
-                        <div class="flex items-center">
-                            <input type="email" name="email" class="border rounded w-full py-2 px-3 text-gray-700" value="chafiaadssi42@gmail.com"/>
-                    
-                        </div>
-                    </div>
-                    <!-- Password -->
-                    <div class="mb-4">
-                        <label class="block text-gray-700 mb-2">Mot de passe :</label>
-                        <a href="#" class="text-blue-500">Modifier le mot de passe</a>
-                    </div>
-                    <!-- Delete Account -->
-                    <div class="mb-4">
-                        <label class="block text-gray-700 mb-2">Supprimer mon compte :</label>
-                        <a href="#" class="text-red-500">Supprimer</a>
-                    </div>
-                    <!-- Submit Button -->
-                    <div>
-                        <button type="submit" class="bg-pink-500 text-white px-4 py-2 rounded">Enregistrer les modifications</button>
-                    </div>
-                </form>
-            </div>
-        </div>
-    </div>
-</section>
-{% endblock %}
+					{# {% for user in users %} #}
+					<div class="w-full md:w-3/4 p-4">
+						{{ form_start(form) }}
+						<h1 class="text-xl font-semibold mb-4 block">Mon profil</h1>
+						<!-- Civility, Name, Surname -->
+						<div class="mb-4">
+							<label class="block text-gray-700 mb-2">Nom</label>
+							{{ form_widget(form.lastName, {'attr': {'class': 'border rounded w-full py-2 px-3 text-gray-700'}}) }}
+						</div>
+						<div class="mb-4">
+							<label class="block text-gray-700 mb-2">Prénom</label>
+							{{ form_widget(form.firstName, {'attr': {'class': 'border rounded w-full py-2 px-3 text-gray-700'}}) }}
+						</div>
+						<!-- Age -->
+						<div class="mb-4">
+							<label class="block text-gray-700 mb-2">Age</label>
+							{{ form_widget(form.age, {'attr': {'class': 'border rounded w-full py-2 px-3 text-gray-700'}}) }}
+						</div>
+						<!-- Phone -->
+						<div class="mb-4">
+							<label class="block text-gray-700 mb-2">Téléphone</label>
+							{{ form_widget(form.phone, {'attr': {'class': 'border rounded w-full py-2 px-3 text-gray-700'}}) }}
+						</div>
+						<!-- Email -->
+						<div class="mb-4">
+							<label class="block text-gray-700 mb-2">Email</label>
+							<div class="flex items-center">
+								{{ form_widget(form.email, {'attr': {'class': 'border rounded w-full py-2 px-3 text-gray-700'}}) }}
+							</div>
+						</div>
+						<!-- Password -->
+						{# <div class="mb-4">
+							<label class="block text-gray-700 mb-2">Mot de passe</label>
+							{{ form_widget(form.password, {'attr': {'class': 'border rounded w-full py-2 px-3 text-gray-700', 'type': 'password'}}) }}
+						</div> #}
+						<!-- Delete Account -->
+						<div class="mb-4">
+							<a href="#" class="text-red-500">Supprimer mon compte</a>
+						</div>
+						<!-- Submit Button -->
+						<div>
+							<button type="submit" class="bg-pink-500 text-white px-4 py-2 rounded">Enregistrer les modifications</button>
+						</div>
+						{{ form_end(form) }}
+						{# {% endfor %} #}
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</section>{% endblock %}
