--- a/templates/chartes/mentions-legales.html.twig
+++ b/templates/chartes/mentions-legales.html.twig
@@ -3,39 +3,40 @@
 {% block title %}Mentions Légales{% endblock %}
 
 {% block body %}
-<section class="flex justify-center text-white" style="background-color: #0060A7;">
-    <div class="max-w-2xl p-4">
-        <h1 class="text-2xl font-bold mb-4">Mentions Légales</h1>
 
-        <p>Ce site est édité par AutoCars de Saint-Etienne, dont le siège social est situé à 8 rue tarentaize, 42100 Saint-Etienne.</p>
+	<section class="flex justify-center items-center text-white" style="background-color: #0060A7; min-height: 100vh;">
+		<div class="max-w-2xl p-4">
+			<h1 class="text-2xl font-bold mb-4 text-center">Mentions Légales</h1>
 
-        <p>Directeur de la publication : Chafi</p>
+			<p class="text-center">Ce site est édité par AutoCars de Saint-Etienne, dont le siège social est situé à 8 rue tarentaize, 42100 Saint-Etienne.</p>
 
-        <p>Téléphone : 0102030405</p>
-        <p>Adresse e-mail : test@test.fr</p>
+			<p class="text-center">Directeur de la publication : Chafi</p>
 
-        <p>Le site est hébergé par Hostinger, dont le siège social est situé à 8 rue tarentaize, 42100 Saint-Etienne.</p>
+			<p class="text-center">Téléphone : 0102030405</p>
+			<p class="text-center">Adresse e-mail : test@test.fr</p>
 
-        <h2 class="text-xl font-bold mt-4">Propriété intellectuelle :</h2>
+			<p class="text-center">Le site est hébergé par Hostinger, dont le siège social est situé à 8 rue tarentaize, 42100 Saint-Etienne.</p>
 
-        <p>L'ensemble des éléments constituant ce site sont la propriété exclusive de AutoCars ou de tiers ayant autorisé AutoCars à les utiliser. Toute reproduction, représentation, modification, publication, transmission ou dénaturation, totale ou partielle, du site ou de son contenu, par quelque procédé que ce soit, et sur quelque support que ce soit, est interdite.</p>
+			<h2 class="text-xl font-bold mt-4 text-center">Propriété intellectuelle :</h2>
 
-        <h2 class="text-xl font-bold mt-4">Protection des données personnelles :</h2>
+			<p class="text-center">L'ensemble des éléments constituant ce site sont la propriété exclusive de AutoCars ou de tiers ayant autorisé AutoCars à les utiliser. Toute reproduction, représentation, modification, publication, transmission ou dénaturation, totale ou partielle, du site ou de son contenu, par quelque procédé que ce soit, et sur quelque support que ce soit, est interdite.</p>
 
-        <p>Les informations collectées par le biais des formulaires de ce site sont destinées à AutoCars, responsable du traitement, à des fins de gestion de la relation client et de prospection commerciale. Conformément à la loi « Informatique et Libertés » du 6 janvier 1978 modifiée et au Règlement Général sur la Protection des Données (RGPD), vous disposez d'un droit d'accès, de rectification, d'effacement des données vous concernant, ainsi que du droit de vous opposer au traitement pour des motifs légitimes. Vous pouvez exercer ces droits en vous adressant à AutoCars à l'adresse suivante : 8 rue Tarentaize, 42100 Saint-Etienne ou par courriel à l'adresse test@test.fr.</p>
+			<h2 class="text-xl font-bold mt-4 text-center">Protection des données personnelles :</h2>
 
-        <h2 class="text-xl font-bold mt-4">Responsabilité :</h2>
+			<p class="text-center">Les informations collectées par le biais des formulaires de ce site sont destinées à AutoCars, responsable du traitement, à des fins de gestion de la relation client et de prospection commerciale. Conformément à la loi « Informatique et Libertés » du 6 janvier 1978 modifiée et au Règlement Général sur la Protection des Données (RGPD), vous disposez d'un droit d'accès, de rectification, d'effacement des données vous concernant, ainsi que du droit de vous opposer au traitement pour des motifs légitimes. Vous pouvez exercer ces droits en vous adressant à AutoCars à l'adresse suivante : 8 rue Tarentaize, 42100 Saint-Etienne ou par courriel à l'adresse test@test.fr.</p>
 
-        <p>AutoCars ne saurait être tenue responsable des erreurs ou omissions dans les informations diffusées sur ce site, ni de la disponibilité des informations. Les informations présentes sur ce site sont données à titre indicatif et peuvent être modifiées à tout moment.</p>
+			<h2 class="text-xl font-bold mt-4 text-center">Responsabilité :</h2>
 
-        <h2 class="text-xl font-bold mt-4">Litiges :</h2>
+			<p class="text-center">AutoCars ne saurait être tenue responsable des erreurs ou omissions dans les informations diffusées sur ce site, ni de la disponibilité des informations. Les informations présentes sur ce site sont données à titre indicatif et peuvent être modifiées à tout moment.</p>
 
-        <p>En cas de litige relatif à l'interprétation ou à l'exécution des présentes mentions légales, il est expressément convenu que les tribunaux compétents seront ceux du ressort du siège social de AutoCars, nonobstant pluralité de défendeurs ou appel en garantie, même pour les procédures d'urgence ou les procédures conservatoires en référé ou par requête.</p>
+			<h2 class="text-xl font-bold mt-4 text-center">Litiges :</h2>
 
-        <p>Fait à Saint-Etienne, le 22/06/24.</p>
+			<p class="text-center">En cas de litige relatif à l'interprétation ou à l'exécution des présentes mentions légales, il est expressément convenu que les tribunaux compétents seront ceux du ressort du siège social de AutoCars, nonobstant pluralité de défendeurs ou appel en garantie, même pour les procédures d'urgence ou les procédures conservatoires en référé ou par requête.</p>
 
-        <p>Chafi</p>
-    </div>
-</section>
+			<p class="text-center">Fait à Saint-Etienne, le 22/06/24.</p>
+
+			<p class="text-center">Chafi</p>
+		</div>
+	</section>
 
 {% endblock %}
