--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -39,7 +39,7 @@ background: radial-gradient(circle, rgba(0,96,167,1) 14%, rgba(0,96,167,1) 41%, 
             </div>
             <div class="flex items-center justify-between">
                 <button class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" type="submit">
-                    Sign In
+                    Connexion
                 </button>
             </div>
         </div>
