--- a/templates/cars/achat.html.twig
+++ b/templates/cars/achat.html.twig
@@ -19,35 +19,22 @@
 					<input type="number" id="price" name="price" placeholder="Prix" class="input-text p-2 border rounded w-full focus:outline-none focus:ring-2 focus:ring-blue-500"/>
 				</div>
 
-				<h4 class="py-3 mt-6 ml-2 text-white">Carburant</h4>
-				<div class="flex flex-col space-y-2 text-white">
-					<div class="flex items-center">
-						<input type="checkbox" id="fuelDiesel" name="fuelDiesel" class="form-checkbox"/>
+				<div class="flex flex-col space-y-4 text-white spac">
+					<div class="flex items-center mt-8">
+						<input type="checkbox" id="fuelDiesel" name="fuel" value="Diesel" class="form-checkbox"/>
 						<label for="fuelDiesel" class="ml-2">Diesel</label>
 					</div>
 					<div class="flex items-center">
-						<input type="checkbox" id="fuelEssence" name="fuelEssence" class="form-checkbox"/>
+						<input type="checkbox" id="fuelEssence" name="fuel" value="Essence" class="form-checkbox"/>
 						<label for="fuelEssence" class="ml-2">Essence</label>
 					</div>
 					<div class="flex items-center">
-						<input type="checkbox" id="fuelGPL" name="fuelGPL" class="form-checkbox"/>
+						<input type="checkbox" id="fuelGPL" name="fuel" value="GPL" class="form-checkbox"/>
 						<label for="fuelGPL" class="ml-2">GPL</label>
 					</div>
 				</div>
 
-				<h4 class="py-3 mt-6 ml-2 text-white">Boite à vitesse</h4>
-				<div class="text-white flex flex-col space-y-2">
-					<div class="flex items-center">
-						<input type="checkbox" id="manualGearBox" name="manualGearBox" class="form-checkbox"/>
-						<label for="manualGearBox" class="ml-2">Manuelle</label>
-					</div>
-					<div class="flex items-center">
-						<input type="checkbox" id="automaticGearBox" name="automaticGearBox" class="form-checkbox"/>
-						<label for="automaticGearBox" class="ml-2">Automatique</label>
-					</div>
-				</div>
-
-				<button id="purchaseButton" type="submit" onclick="" class="mt-6 w-full bg-blue-500 text-white py-2 rounded-lg text-sm font-medium hover:bg-blue-600 focus:ring-4 focus:ring-blue-300 transition duration-300">
+				<button id="purchaseButton" type="submit" class="mt-8 w-full bg-blue-500 text-white py-2 rounded-lg text-sm hover:bg-blue-600 focus:ring-4 focus:ring-blue-300 transition duration-300">
 					Recherche
 				</button>
 			</form>
@@ -62,109 +49,44 @@
 
 
 						<div class="card-images h-48 overflow-hidden">
-	{% if car.pictures %}
-		{% for picture in car.pictures %}
-			{% if picture.car.id == car.id %}
-				<img src="{{ asset('assets/img/cars-users/' ~ picture.name) }}" alt="{{ picture.name }}" class="w-full h-full object-cover"/>
-			{% endif %}
-		{% endfor %}
-	{% endif %}
-	</div>
-							<div class="card-body p-4">
-								<div class="characteristic flex justify-between mb-4">
-									<div class="flex flex-col">
-										<p class="card-type font-bold text-lg text-gray-800">{{ car.type }}</p>
-										<p class="card-brand text-gray-500">{{ car.brand }}</p>
-										<p class="card-model text-gray-500">{{ car.model }}</p>
-									</div>
-									<div class="flex flex-col text-right">
-										<p class="card-year text-gray-500">{{ car.year }}
-											ans</p>
-										<p class="card-mileage text-gray-500">{{ car.mileage }}
-											km</p>
-										<p class="card-fuel text-gray-500">{{ car.fuel }}</p>
-									</div>
-								</div>
-								<p class="card-price text-center text-xl font-bold text-gray-800 mb-4">{{ car.price }}€</p>
-								<a href="{{ path('app_cars_show', {'id': car.id}) }}" class="btn btn-primary block text-center bg-blue-500 text-white py-2 rounded hover:bg-blue-600 transition duration-300">
-									Voir
-								</a>
-							</div>
+							{% if car.pictures %}
+								{% for picture in car.pictures %}
+									{% if picture.car.id == car.id %}
+										<img src="{{ asset('assets/img/cars-users/' ~ picture.name) }}" alt="{{ picture.name }}" class="w-full h-full object-cover"/>
+									{% endif %}
+								{% endfor %}
+							{% endif %}
 						</div>
-					{% endfor %}
-				</div>
-			</section>
-		</div>
+						<div class="card-body pt-4" style="background-color: #0060A7;">
+							<div class="characteristic flex justify-around mb-4">
+								<div class="flex flex-col">
+									<p class="card-type font-bold text-lg text-white">{{ car.type }}</p>
+									<p class="card-brand text-white">{{ car.brand }}</p>
+									<p class="card-model text-white">{{ car.model }}</p>
+								</div>
+								<div class="flex flex-col text-right">
+									<p class="card-year text-white">{{ car.year }}
+										ans</p>
+									<p class="card-mileage text-white">{{ car.mileage }}
+										km</p>
+									<p class="card-fuel text-white">{{ car.fuel }}</p>
+								</div>
+							</div>
+							<p class="card-price text-center text-xl font-bold text-white mb-4">{{ car.price }}€</p>
+							<a href="{{ path('app_cars_show', {'id': car.id}) }}" class="btn btn-primary block text-center bg-blue-500 text-white py-2 rounded hover:bg-blue-600 transition duration-300">
+								Voir
+							</a>
+						</div>
+					</div>
+				{% endfor %}
+			</div>
+		</section>
+	</div>
 
 
-	{% endblock %}
+{% endblock %}
 
 
 {% block javascripts %}
-<script>
-// Attache un gestionnaire d'événements 'submit' à l'élément avec l'ID 'searchForm'
-document.getElementById('searchForm').addEventListener('submit', function(event) {
-    // Empêche la soumission normale du formulaire
-    event.preventDefault();
 
-    // Crée un nouvel objet FormData à partir du formulaire
-    const formData = new FormData(this);
-    // Crée un nouvel objet URLSearchParams pour construire les paramètres de la requête
-    const searchParams = new URLSearchParams();
-
-    // Pour chaque paire clé/valeur dans formData, ajoute cette paire à searchParams
-    for (const pair of formData) {
-        searchParams.append(pair[0], pair[1]);
-    }
-
-    // Envoie une requête POST à l'URL spécifiée avec les paramètres de recherche comme corps de la requête
-    fetch('{{ path('app_cars_achat') }}', {
-        method: 'POST',
-        body: searchParams,
-    })
-    // Convertit la réponse en JSON
-    .then(response => response.json())
-    // Traite les données JSON
-    .then(data => {
-        // Obtient l'élément avec l'ID 'car-list'
-        const carList = document.getElementById('car-list');
-        // Vide le contenu de carList
-        carList.innerHTML = '';
-
-        // Pour chaque voiture dans les données
-        data.cars.forEach(car => {
-            // Crée une nouvelle carte de voiture avec les informations de la voiture
-            const carCard = `
-                <div class="card border border-gray-200 shadow-md rounded-lg overflow-hidden bg-white">
-                    <div class="card-images h-48 overflow-hidden">
-                        ${car.pictures.map(picture => `<img src="{{ asset('assets/img/cars-users/') }}${picture.name}" alt="${picture.name}" class="w-full h-full object-cover"/>`).join('')}
-                    </div>
-                    <div class="card-body p-4">
-                        <div class="characteristic flex justify-between mb-4">
-                            <div class="flex flex-col">
-                                <p class="card-type font-bold text-lg text-gray-800">${car.type}</p>
-                                <p class="card-brand text-gray-500">${car.brand}</p>
-                                <p class="card-model text-gray-500">${car.model}</p>
-                            </div>
-                            <div class="flex flex-col text-right">
-                                <p class="card-year text-gray-500">${car.year} ans</p>
-                                <p class="card-mileage text-gray-500">${car.mileage} km</p>
-                                <p class="card-fuel text-gray-500">${car.fuel}</p>
-                            </div>
-                        </div>
-                        <p class="card-price text-center text-xl font-bold text-gray-800 mb-4">${car.price}€</p>
-                        <a href="{{ path('app_cars_show', {'id': car.id}) }}" class="btn btn-primary block text-center bg-blue-500 text-white py-2 rounded hover:bg-blue-600 transition duration-300">
-                            Voir
-                        </a>
-                    </div>
-                </div>
-            `;
-            // Ajoute la carte de voiture à carList
-            carList.innerHTML += carCard;
-        });
-    })
-    // Si une erreur se produit, la log dans la console
-    .catch(error => console.error('Error:', error));
-});
-</script>
 {% endblock %}
