--- a/templates/profil/anouncemment.html.twig
+++ b/templates/profil/anouncemment.html.twig
@@ -6,61 +6,93 @@
 
 {% block stylesheets %}{% endblock %}
 
-
 {% block body %}
-	<section>
-		<div class="mx-auto">
-			<div
-				class="flex">
-				<!-- Sidebar -->
-				<div class="w-1/4 p-4 shadow" style="background-color: #0060A7;">
-					<ul class="space-y-4 profil-items">
-						<li>
-							<a href="{{ path('app_profil')}}" class="text-gray-800">Mon profil</a>
-						</li>
-						<li>
-							<a href="{{ path('app_annonce')}}">Mes annonces</a>
-						</li>
-						{# <li>
-							<a href="{{ path('app_profil_favorite')}}" class="text-gray-800">Mes favoris</a>
-						</li> #}
-						<li>
-							<a href="{{ path('app_cars_vente')}}">Déposer une annonce</a>
-						</li>
-						<li>
-							<a href="{{ path('app_logout')}}">Déconnexion</a>
-						</li>
-					</ul>
+
+	<section class="flex flex-col lg:flex-row">
+		<div
+			class="w-full lg:w-1/4 p-4 shadow text-white" style="background-color: #0060A7;">
+			
+			<ul class="space-y-4 profil-items">
+			{# Liste des liens de navigation #}
+				<li>
+					<a href="{{ path('app_profil')}}">Mon profil</a>
+				</li>
+				<li>
+					<a href="{{ path('app_annonce')}}">Mes annonces</a>
+				</li>
+				<li>
+					<a href="{{ path('app_cars_vente')}}">Déposer une annonce</a>
+				</li>
+				<li>
+					<a href="{{ path('app_logout')}}">Déconnexion</a>
+				</li>
+			</ul>
+		</div>
+
+		<div class="w-full lg:w-3/4 bg-white p-6 rounded shadow">
+			{% for label, messages in app.flashes %}
+				<div class="{{ label }} bg-opacity-50 p-4 mb-4 border-l-4 rounded" role="alert">
+					<button type="button" class="text-right text-xl leading-none px-4 py-1" data-bs-dismiss="alert" aria-label="Close">×</button>
+					{% for message in messages %}
+						<p class="font-bold">{{ message }}</p>
+					{% endfor %}
 				</div>
-				<!-- Main Content -->
-				<div class="w-3/4 ml-6">
-					<div class="bg-white p-6 rounded shadow">
-						<h1 class="text-xl font-semibold mb-4">Mes Annonces</h1>
-						<div class="border-2 border-dashed border-gray-300 p-6 text-center">
-							{# {% if userCars is empty %}
-								<p>Vous n'avez pas d'annonces</p>
-								<a href="{{ path('app_cars_vente') }}">
-									<button type="submit" class="bg-pink-500 text-white px-4 py-2 rounded mt-4">Déposer une annonce</button>
-								</a>
-							{% else %}
-								<p>Vous avez
-									{{ userCars|length }}
-									annonce(s).</p>
-								<ul>
-									{% for car in userCars %}
-										<li>
-											{{ car.name }}
-											-
-											{{ car.model }}
-											<a href="{{ path('app_annonce_edit', {id: car.id}) }}">Modifier</a>
-										</li>
-									{% endfor %}
-								</ul>
-							{% endif %} #}
-						</div>
+			{% endfor %}
+
+			<h1 class="text-xl font-semibold mb-4">Mes Annonces</h1>
+			<div class="p-6 text-center">
+				{% if cars is empty %}
+					<p>Vous n'avez pas d'annonces</p>
+					<a href="{{ path('app_cars_vente') }}">
+						<button type="submit" class=" text-white px-4 py-2 rounded mt-4" style="background-color: #0060A7;">Déposer une annonce</button>
+					</a>
+				{% else %}
+					<p class="mt-4">Vous avez
+						{{ cars|length }}
+						vente(s).</p>
+					<div id="car-list" class="container-card grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 mt-8">
+						{% for car in cars %}
+							<div class="card border border-gray-200 shadow-md rounded-lg overflow-hidden bg-white">
+								<div class="card-images h-48 overflow-hidden">
+									{% if car.pictures %}
+										{% for picture in car.pictures %}
+											{% if picture.car.id == car.id %}
+												<img src="{{ asset('assets/img/cars-users/' ~ picture.name) }}" alt="{{ picture.name }}" class="w-full h-full object-cover"/>
+											{% endif %}
+										{% endfor %}
+									{% endif %}
+								</div>
+								<div class="card-body pt-4" style="background-color: #0060A7;">
+									<div class="flex justify-around mb-4">
+										<div class="flex flex-col">
+											<p class="card-type font-bold text-lg text-white">{{ car.type }}</p>
+											<p class="card-brand text-white">{{ car.brand }}</p>
+											<p class="card-model text-white">{{ car.model }}</p>
+										</div>
+										<div class="flex flex-col text-right">
+											<p class="card-year text-white">{{ car.year }}
+												ans</p>
+											<p class="card-mileage text-white">{{ car.mileage }}
+												km</p>
+											<p class="card-fuel text-white">{{ car.fuel }}</p>
+										</div>
+									</div>
+									<p class="card-price text-center text-xl font-bold text-white mb-4">{{ car.price }}€</p>
+									<div class="flex justify-around my-4">
+										<a href="{{ path('app_annonce_edit', {id: car.id}) }}" class="text-blue-500 hover:underline">Modifier</a>
+										<a href="{{ path('app_annonce_delete', {id: car.id}) }}" class="text-red-500 hover:underline">Supprimer</a>
+									</div>
+									<a href="{{ path('app_cars_show', {'id': car.id}) }}" class="btn btn-primary block text-center bg-blue-500 text-white py-2 rounded hover:bg-blue-600 transition duration-300">
+										Voir
+									</a>
+								</div>
+							</div>
+						{% endfor %}
 					</div>
-				</div>
+				{% endif %}
 			</div>
 		</div>
-		{# </section> #}
-	{% endblock %}
+	</section>
+{% endblock %}
+
+{% block javascripts %}{% endblock %}
