--- a/templates/profil/profil.html.twig
+++ b/templates/profil/profil.html.twig
@@ -17,9 +17,12 @@
 							<li>
 								<a href="{{ path('app_annonce')}}" class="block md:text-white">Mes annonces</a>
 							</li>
+							<li>
+								<a href="{{ path('app_cars_vente')}}">Déposer une annonce</a>
+							</li>
 							{# <li>
-								<a href="#" class="block md:text-white">Mes favoris</a>
-							</li> #}
+																						<a href="#" class="block md:text-white">Mes favoris</a>
+																					</li> #}
 							<li>
 								<a href="{{ path('app_logout') }}" class="block md:text-white">Déconnexion</a>
 							</li>
@@ -56,18 +59,14 @@
 								{{ form_widget(form.email, {'attr': {'class': 'border rounded w-full py-2 px-3 text-gray-700'}}) }}
 							</div>
 						</div>
-						<!-- Password -->
-						{# <div class="mb-4">
-							<label class="block text-gray-700 mb-2">Mot de passe</label>
-							{{ form_widget(form.password, {'attr': {'class': 'border rounded w-full py-2 px-3 text-gray-700', 'type': 'password'}}) }}
-						</div> #}
 						<!-- Delete Account -->
-						<div class="mb-4">
-							<a href="#" class="text-red-500">Supprimer mon compte</a>
-						</div>
+							
+			<div class="mb-4">
+				<a href="{{ path('app_profil_delete') }}" class="text-red-500" onclick="return confirm('Êtes-vous sûr de vouloir supprimer votre compte ? Cette action est irréversible.');">Supprimer mon compte</a>
+			</div>
 						<!-- Submit Button -->
 						<div>
-							<button type="submit" class="bg-pink-500 text-white px-4 py-2 rounded">Enregistrer les modifications</button>
+							<button type="submit" class=" text-white px-4 py-2 rounded" style="background-color: #0060A7;">Enregistrer les modifications</button>
 						</div>
 						{{ form_end(form) }}
 						{# {% endfor %} #}
