--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -60,7 +60,7 @@
 					<div class="grid gap-4 sm:grid-cols-2 sm:gap-6  mb-4 flex justify-center items-center">
 						<div class="sm:col-span-2">
 							<label for="type" class="dark:text-white">Type</label>
-							<input type="text" name="type" id="type" class="text-sm rounded-lg  w-full p-2.5 dark:bg-gray-700 dark:placeholder-gray-400 dark:text-white " placeholder="Sport">
+							<input type="text" name="typen" id="type" class="text-sm rounded-lg  w-full p-2.5 dark:bg-gray-700 dark:placeholder-gray-400 dark:text-white " placeholder="Sport">
 						</div>
 						<div class="w-full">
 							<label for="brand" class="dark:text-white">Marque</label>
