--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -56,26 +56,26 @@
 			<div class="py-8 px-4 mx-auto max-w-2xl lg:py-16 flex justify-center items-center">
 
 
-				<form action="{{ path('app_cars_achat') }}" class="text-white" method="post">
+				<form action="{{ path('app_cars_achat') }}" class="" method="post">
 					<div class="grid gap-4 sm:grid-cols-2 sm:gap-6  mb-4 flex justify-center items-center">
 						<div class="sm:col-span-2">
-							<label for="type" class="dark:text-white">Type</label>
+							<label for="type" class="text-white">Type</label>
 							<input type="text" name="typen" id="type" class="text-sm rounded-lg  w-full p-2.5 dark:bg-gray-700 dark:placeholder-gray-400 dark:text-white " placeholder="Sport">
 						</div>
 						<div class="w-full">
-							<label for="brand" class="dark:text-white">Marque</label>
+							<label for="brand" class="text-white">Marque</label>
 							<input type="text" name="brand" id="brand" class="text-sm rounded-lg  w-full p-2.5 dark:bg-gray-700 dark:placeholder-gray-400 dark:text-white " placeholder="Jaguar">
 						</div>
 						<div class="w-full">
-							<label for="model" class="dark:text-white">Model</label>
+							<label for="model" class="text-white">Model</label>
 							<input type="text" name="model" id="model" class="text-sm rounded-lg  w-full p-2.5 dark:bg-gray-700 dark:placeholder-gray-400 dark:text-white " placeholder="XJ14">
 						</div>
 						<div>
-							<label for="mileage" class="dark:text-white">Kilométrages</label>
+							<label for="mileage" class="text-white">Kilométrages</label>
 							<input type="text" name="mileage" id="mileage" class="text-sm rounded-lg  w-full p-2.5 dark:bg-gray-700 dark:placeholder-gray-400 dark:text-white " placeholder="150 000 kms">
 						</div>
 						<div>
-							<label for="price" class="dark:text-white">Price</label>
+							<label for="price" class="text-white">Price</label>
 							<input type="text" name="price" id="price" class="text-sm rounded-lg  w-full p-2.5 dark:bg-gray-700 dark:placeholder-gray-400 dark:text-white " placeholder="50 000€">
 						</div>
 					</div>
