--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -14,7 +14,7 @@ background: radial-gradient(circle, rgba(0,96,167,1) 14%, rgba(0,96,167,1) 41%, 
             {% for flash_error in app.flashes('verify_email_error') %}
                 <div class="alert alert-danger" role="alert">{{ flash_error }}</div>
             {% endfor %}
-                <div class="text-center">
+                <div class="text-center text-black">
             {{ form_start(registrationForm) }}
             {{ form_widget(registrationForm) }}
             </div>
