--- a/templates/cars/achat.html.twig
+++ b/templates/cars/achat.html.twig
@@ -11,7 +11,7 @@
 		<section style="background-color: #0060A7;" class="w-full lg:w-1/4 p-6 bg-white shadow-lg">
 			<form action="{{ path('app_cars_achat') }}" method="POST">
 				<div class="flex flex-col space-y-4">
-					<input type="text" id="searchInput" name="type" placeholder="Type" class="input-text p-2 border rounded w-full focus:outline-none focus:ring-2 focus:ring-blue-500"/>
+					<input type="text" id="type" name="type" placeholder="Type" class="input-text p-2 border rounded w-full focus:outline-none focus:ring-2 focus:ring-blue-500"/>
 					<input type="text" id="brand" name="brand" placeholder="Marque" class="input-text p-2 border rounded w-full focus:outline-none focus:ring-2 focus:ring-blue-500"/>
 					<input type="text" id="model" name="model" placeholder="Modèle" class="input-text p-2 border rounded w-full focus:outline-none focus:ring-2 focus:ring-blue-500"/>
 					<input type="number" id="year" name="year" placeholder="Année" class="input-text p-2 border rounded w-full focus:outline-none focus:ring-2 focus:ring-blue-500"/>
