--- a/templates/message/new.html.twig
+++ b/templates/message/new.html.twig
@@ -1,7 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}New Message
-{% endblock %}
+{% block title %}New Message{% endblock %}
 
 {% block body %}
 
